demo/spring-boot-demo/spring-boot-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-demo-deployment
  namespace: demo
  labels:
    app: spring-boot-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-demo
  template:
    metadata:
      labels:
        app: spring-boot-demo
    spec:
      containers:
        - name: spring-boot-demo
          image: kfpt/spring-boot-demo:0.0.2
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
