demo/spring-boot-demo/spring-boot-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-svc
  namespace: demo
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: spring-boot-demo
